--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WikLand</title>
   </head>
   <body>
+    <div id="popup-root"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
